# databricks-assessment-tool

./: .env.example  .gitignore  README.md  init.tf  requirements.txt  run_agents_debug.sh  run_app.bat  run_app.py  run_app.sh  test_agents.sh
databricks_app/: start.sh
databricks_app/backend/: execution_manager.py  executors.py  main.py  main_minimal.py  pdf_generator.py  requirements.txt
databricks_app/backend/ai_agent/: __init__.py  agent.py  prompts.json  run.py
databricks_app/frontend/: index.html  package-lock.json  package.json  vite.config.js
databricks_app/frontend/src/: App.jsx  api.js  main.jsx
databricks_app/frontend/src/components/: AgentsStep.jsx  ConfigurationStep.jsx  ExecutionStep.jsx  ResultsStep.jsx  UCXUploadStep.jsx
databricks_summary_agent/: pyproject.toml
databricks_summary_agent/src/terraform_file_summary_agent/: agent_registry.py  crew.py  main.py  terraform_summarizer.py
databricks_summary_agent/src/terraform_file_summary_agent/config/: agents.yaml  tasks.yaml
databricks_summary_agent/src/terraform_file_summary_agent/tools/: terraform_summary_tool.py  ucx_analyzer_tool.py
